--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<h2>Количество кликов: {{clicks}}</h2>
-
-<app-child-comp (sonChanged)="willChange($event)"></app-child-comp>
+<router-outlet></router-outlet>
