--- a/src/app/child-comp/child-comp.component.html
+++ b/src/app/child-comp/child-comp.component.html
@@ -1,2 +1,6 @@
-<button (click)="change(true)" >+</button>
-<button (click)="change(false)">-</button>
+<div class="styles">
+  <h2>child component</h2>
+</div>
+
+
+
